--- a/Homework/FirstLeson/stiale.css
+++ b/Homework/FirstLeson/stiale.css
@@ -1,4 +1,22 @@
-.box{
+.box {
     width: 300px;
     height: 100px;
+}
+
+.redBtn {
+    margin-left: 40%;
+    width: 200px;
+    height: 70px;
+    font-size: 34px;
+    border-radius: 20px;
+}
+
+.lightMod {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.darkMod {
+    background-color: #000000;
+    color: #ffffff;
 }
